--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
   "rules": {
     "strict": 0,
     "react/prop-types": "off",
-    "no-unused-vars": "warn"
+    "no-unused-vars": "warn",
+    "no-constant-condition": "warn"
   },
   "extends": ["eslint:recommended", "plugin:react/recommended"]
 }
