--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@uniswap/org",
+  "name": "@nerveglobal/com",
   "private": true,
-  "description": "Uniswap homepage and knowledgebase",
+  "description": "Nerve Global homepage and knowledgebase",
   "version": "0.1.0",
   "author": "Callil Capuozzo <callil.capuozzo@gmail.com>",
   "engines": {
@@ -121,9 +121,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/uniswap-org"
+    "url": "https://github.com/nerveglobal/"
   },
   "bugs": {
-    "url": "https://github.com/Uniswap/uniswap-org/issues"
+    "url": "https://github.com/nerveglobal/"
   }
 }
