--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
-    "@material-ui/core": "^4.11.3",
-    "@mdx-js/mdx": "^1.5.5",
+    "@mdx-js/mdx": "1.5.9",
     "@mdx-js/react": "^1.5.5",
     "@react-hook/media-query": "^1.0.1",
     "@sideway/address": "^4.1.2",
