--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "nerve-global-website",
 	"version": "1.0.0",
 	"description": "Nerve Global Landing Page",
-	"author": "Christoph Könekamp",
+	"author": "Nerve Global GmbH",
 	"homepage": "https://www.nerveglobal.com",
 	"keywords": [
 		"nerve",
